--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@
       <div>Kunal Narayan Chaudhury, Daniel Sage, and Michael Unser. Fast o(1) bilateral filtering using trigono- metric range kernels. IEEE Transactions on Image Processing, 20(12):3376–3382, 2011.</div>
 			<div>Christina Karam and Keigo Hirakawa. Monte-carlo acceleration of bilateral filter and non-local means. IEEE Transactions on Image Processing, 27(3):1462–1474, 2017.</div>
 			<div> used GrabSnap's template http://pages.cs.wisc.edu/%7Eswansonl/Web/index.html </div>
+	    <div> Image dataset from https://cs.brown.edu/courses/csci1290/labs/lab_bilateral/index.html </div>
     </div>
     <br><br><br><br><br><br><br>
 	</body>
