--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 					<center><img src="cos_approx_filter.png", width="1000"><figcaption>Comparison between true bilateral filter and Trigonometric approximation. From the left to right is ground truth, noisy image, true bilateral filter, and approximated bilateral filter</figcaption><br></center>
 					<center><img src="cos_approx_filter_detail.png", width="1000"><figcaption>Zoom in to partial image to show the filtered result</figcaption><br></center>
 
-					The order of approximation is 30. The computation time is 279.7639 seconds for true bilateral filter and 17.5635 seconds for Trigonometric approximation. The quality of approximation is pretty good. While the direct observation does not show advantage of raised cosine approximation, later more qualified metric will be compared.
+					The order of approximation is 30. The computation time is 279.7639 seconds for true bilateral filter and 17.5635 seconds for Trigonometric approximation. The quality of approximation is pretty good. While the direct observation does not show advantage of raised cosine approximation, later more quantitative metric will be compared.
 
 				</div>
 
