--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
 				The mean square error between true bilateral filter values and approximated values in the intensity scale of [0, 1] is 0.00021294 for Taylor's approximation and 3.492640e-06 for Trigonometric approximation.
 
-				A different metric of image similarity is  structural similarity index (SSIM) at range [0, 1] with 1 being the best matching.
+				A different metric of image similarity is  structural similarity index (SSIM). It has range [0, 1] with 1 being the best matching.
 				The SSIM between true bilateral filter values and approximated values is 0.99830 for Taylor's approximation and 0.99997 for Trigonometric approximation.
 
 				Clearly, Trigonometric approximation is better.
