--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
 				\[\exp( - \frac{1}{2 \sigma_h^2} || f(x) - f(y) ||^2 ) = \exp( - \frac{1}{2 \sigma_h^2} \sum_{i = 1}^d (f_i(x) - f_i(y))^2 ) = \prod_{i = 1}^d \exp( - \frac{1}{2 \sigma_h^2} (f_i(x) - f_i(y))^2 ) \approx \prod_{i = 1}^d [\sum_{n = 0}^m a_{i, n}(x) b_{i, n}(y)]\]
 
-				where \(f_i\) is the intensity of i-th channel of image and d is the number of channels or dimensions. Indicating that the number of summation terms of the expansion to sum of products or the number of convolution grows exponentially as the number of dimensions $d$. Thus, it is problematic, so different approximation methods are required for high dimensional images.
+				where \(f_i\) is the intensity of i-th channel of image and d is the number of channels or dimensions. Indicating that the number of summation terms of the expansion to sum of products or the number of convolution grows exponentially as the number of dimensions d. Thus, it is problematic, so different approximation methods are required for high dimensional images.
 
 	      <hr>
 				<h4>Monte-Carlo Approximation</h4>
